# bes

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  github_googleapis_googleapis_pr_855.patch
.github/workflows/: bazel.yml
src/acceptance-test/java/kiwi/breen/bes/: AcceptanceTest.java  AcceptanceTestSuite.java  ContainerAcceptanceTest.java
src/acceptance-test/java/nickbreen/bes/: AcceptanceTest.java  AcceptanceTestSuite.java  ContainerAcceptanceTest.java
src/domain/java/kiwi/breen/bes/: PublishBuildEventProcessor.java
src/domain/java/kiwi/breen/bes/processor/: BazelBuildEventProcessor.java  BinaryJournalProcessor.java  BuildEventProcessor.java  DatabaseProcessor.java  DatabaseProcessorFactory.java  DatabaseProcessorFactoryException.java  JournalException.java  JournalProcessor.java  JsonlJournalProcessor.java  PublishEventProcessor.java  TextJournalProcessor.java
src/domain/java/kiwi/breen/bes/sink/: BinaryWriter.java  JsonlWriter.java  TextWriter.java
src/domain/java/nickbreen.bes/: BazelBuildEventProcessor.java  BinarySink.java  BuildEventSinkProcessor.java  DataSourceFactory.java  JsonSink.java  ProcessorFactory.java  SinkFactory.java  TextSink.java
src/domain/java/nickbreen.bes/data/: DataSourceFactory.java  EventDAO.java
src/domain/java/nickbreen.bes/processor/: BazelBuildEventProcessor.java  BuildEventProcessor.java  BuildEventSinkProcessor.java  DatabaseEventProcessor.java  DatabaseProcessor.java  DatabaseProcessorFactory.java  DatabaseProcessorFactoryException.java  JournalProcessor.java  ProcessorFactory.java  PublishEventProcessor.java
src/domain/java/nickbreen.bes/sink/: BinarySink.java  BinaryWriter.java  JsonSink.java  JsonlWriter.java  SinkFactory.java  TextSink.java  TextWriter.java
src/domain/resources/: h2.properties  init.mariadb.sql  init.sqlite.sql  mysql.properties  sqlite.properties
src/integration-test/java/kiwi/breen/bes/: IntegrationTestSuite.java
src/integration-test/java/kiwi/breen/bes/processor/: DatabaseProcessorIntegrationTest.java
src/integration-test/java/kiwi/breen/bes/sink/: BinarySinkIntegrationTest.java  JsonSinkIntegrationTest.java  TextSinkIntegrationTest.java
src/integration-test/java/nickbreen.bes/: BinarySinkTest.java  IntegrationTestSuite.java  JsonSinkTest.java  SinkTest.java  TextSinkTest.java
src/integration-test/java/nickbreen.bes/data/: IntegrationTestDAO.java
src/integration-test/java/nickbreen.bes/processor/: BuildEventSinkProcessorIntegrationTest.java  DatabaseEventProcessorIntegrationTest.java  DatabaseProcessorIntegrationTest.java
src/integration-test/java/nickbreen.bes/sink/: BinarySinkIntegrationTest.java  JsonSinkIntegrationTest.java  TextSinkIntegrationTest.java
src/integration-test/resources/: init.h2.sql  init.sqlite.sql
src/main/: BUILD.bazel
src/main/java/kiwi/breen/bes/: BesServer.java  DataSourceFactory.java  DatabaseProcessorFactory.java  PublishBuildEventProcessor.java  SinkFactory.java
src/main/java/nickbreen/bes/: BaseBuildEventConsumer.java  BazelBuildEventConsumer.java  BesClient.java  BesProxy.java  BesServer.java  BuildEventConsumer.java  BuildEventProcessor.java  DataSourceFactory.java  DelegatingBuildEventConsumer.java  Journal.java  JournalType.java  Main.java  ProcessorFactory.java  PublishBuildEventProcessor.java  PublishBuildEventProxy.java  PublishBuildEventService.java  PublishEventProcessor.java  SinkFactory.java  Util.java
src/main/java/nickbreen/bes/args/: UriConverter.java  UriValidator.java
src/main/resources/: init.postgresql.sql
src/support/java/kiwi/breen/bes/: Util.java
src/support/java/nickbreen/bes/: Util.java
src/test/: BUILD.bazel
src/test-support/java/kiwi/breen/bes/: AnyMatcher.java  BesClient.java  MessageMatcher.java  TestDAO.java  TestUtil.java
src/test-support/java/nickbreen/bes/: AnyMatcher.java  BesClient.java  MessageMatcher.java  TestUtil.java
src/test-support/java/nickbreen/bes/data/: TestDAO.java
src/test-support/resources/: init.postgresql.sql  jnl.text
src/test/java/kiwi/breen/bes/: FixturesCompatibilityTest.java  TestSuite.java
src/test/java/kiwi/breen/bes/processor/: BazelBuildEventProcessorTest.java  BinaryJournalProcessorTest.java  JournalProcessorTest.java  JsonlJournalProcessorTest.java  TextJournalProcessorTest.java
src/test/java/nickbreen.bes/: BazelBuildEventProcessorTest.java  BuildEventSinkProcessorTest.java  FixturesCompatibilityTest.java  FixturesTest.java  TestSuite.java
src/test/java/nickbreen.bes/processor/: BazelBuildEventProcessorTest.java  BuildEventSinkProcessorTest.java  JournalProcessorTest.java
src/test/resources/: bes.jsonl  bes.txt  jnl.jsonl  jnl.text
vertx/: BUILD.bazel
vertx/src/main/java/kiwi/breen/bes/: GenericLocalCodec.java  OrderedBuildEventService.java  VertxMain.java
