load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "rules_jvm_external",
    sha256 = "85fd6bad58ac76cc3a27c8e051e4255ff9ccd8c92ba879670d195622e7c0a9b7",
    strip_prefix = "rules_jvm_external-6.0",
    url = "https://github.com/bazelbuild/rules_jvm_external/releases/download/6.0/rules_jvm_external-6.0.tar.gz",
)

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@rules_jvm_external//:specs.bzl", "maven")

# Pull down rules to generate a Java protobuf and gRPC library using java_library
http_archive(
    name = "rules_proto_grpc",
    sha256 = "2a0860a336ae836b54671cbbe0710eec17c64ef70c4c5a88ccfd47ea6e3739bd",
    strip_prefix = "rules_proto_grpc-4.6.0",
    url = "https://github.com/rules-proto-grpc/rules_proto_grpc/releases/download/4.6.0/rules_proto_grpc-4.6.0.tar.gz",
)

load("@rules_proto_grpc//:repositories.bzl", "rules_proto_grpc_repos", "rules_proto_grpc_toolchains")

rules_proto_grpc_toolchains()

rules_proto_grpc_repos()

load("@rules_proto_grpc//java:repositories.bzl", rules_proto_grpc_java_repos = "java_repos")

rules_proto_grpc_java_repos()

load("@io_grpc_grpc_java//:repositories.bzl", "IO_GRPC_GRPC_JAVA_ARTIFACTS", "IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS", "grpc_java_repositories")

maven_install(
    artifacts = [
        "com.google.protobuf:protobuf-java-util:4.26.0-RC1",
        "com.mchange:c3p0:0.9.5.5",
        "com.mysql:mysql-connector-j:8.3.0",
        "javax.json:javax.json-api:1.1",
        "junit:junit:4.12",
        "org.glassfish:javax.json:1.1",
        "org.hamcrest:hamcrest:2.2",
        "org.jcommander:jcommander:1.83",
        "org.mariadb.jdbc:mariadb-java-client:3.3.2",
        "org.postgresql:postgresql:42.7.1",
        "org.testcontainers:mariadb:1.19.4",
        "org.testcontainers:mysql:1.19.4",
        "org.testcontainers:postgresql:1.19.4",
        "org.testcontainers:testcontainers:1.19.4",
        "org.xerial:sqlite-jdbc:3.45.1.0",
        # "com.h2database:h2:2.2.224",  # unused
        # "org.mockito:mockito-core:5.10.0",
        # "redis.clients:jedis:5.1.0",
    ] + IO_GRPC_GRPC_JAVA_ARTIFACTS,
    fetch_javadoc = True,
    fetch_sources = True,
    generate_compat_repositories = True,
    override_targets = IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS,
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)

load("@maven//:compat.bzl", "compat_repositories")

compat_repositories()

grpc_java_repositories()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")

switched_rules_by_language(
    name = "com_google_googleapis_imports",
    grpc = True,
    java = True,
)

http_archive(
    name = "bazel",
    sha256 = "09704f53cb92b09694e82338e8717f97e9821ce44b945c913f0b2a669ea71738",
    strip_prefix = "bazel-6.4.0",
    url = "https://github.com/bazelbuild/bazel/archive/refs/tags/6.4.0.tar.gz",
)
