load("@rules_jvm_external//:defs.bzl", "artifact")

java_test(
    name = "test",
    srcs = glob(["java/**/*.java"]),
    resources = glob(["resources/**"]),
    test_class = "nickbreen.bes.FixturesTest",
    runtime_deps = [
        artifact("org.glassfish:javax-json"),
    ],
    deps = [
        "@bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_java_proto",
        "@com_google_googleapis//google/devtools/build/v1:build_java_proto",
        artifact("com.google.protobuf:protobuf-java-util"),
        artifact("javax.json:javax.json_api"),
        artifact("junit:junit"),
        artifact("org.hamcrest:hamcrest"),
    ],
)
